fix not showing Cairo font

--- a/public/assets/css/panel/custom.css
+++ b/public/assets/css/panel/custom.css
@@ -93,7 +93,7 @@
       border-color: #dee2e6; } }
 
   body {
-    font-family: "Poppins", Arial, sans-serif;
+    /*font-family: "Poppins", Arial, sans-serif;*/
     font-size: 14px;
     line-height: 1.8;
     font-weight: normal;
@@ -125,7 +125,7 @@
   .h1, .h2, .h3, .h4, .h5 {
     line-height: 1.5;
     font-weight: 400;
-    font-family: "Poppins", Arial, sans-serif;
+    /*font-family: "Poppins", Arial, sans-serif;*/
     color: #000; }
 
   .ftco-section {
